Changing site display name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: bnbalsamo
+title: from bnbalsamo import thoughts
 author: Brian Balsamo
 email: brian@brianbalsamo.com
 github_username: bnbalsamo
