debating naming some more

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: from bnbalsamo import thoughts
+title: from bnb import thoughts, musings, ramblings
 author: Brian Balsamo
 email: brian@brianbalsamo.com
 github_username: bnbalsamo
