--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,7 @@ collections:
     speaker_notes:
         output: true
 exclude:
-    - make_post.sh
-    - make_pres.sh
-    - make_speaker_notes.py
-    - test_site.sh
-    - build_site.sh
+    - tasks.py 
     - Dockerfile
     - .dockerignore
     - .travis.yml
