Better File Name Handling
Borrows werkzeug.utils.secure_filename functionality in order escape
filenames from titles.

Blackens/isorts `tasks.py`. Tweaks the config as required.

Adds `requirements_dev.txt` which includes the requirements to run
`tasks.py`

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ collections:
         output: true
 exclude:
     - tasks.py 
+    - requirements_dev.txt
     - Dockerfile
     - .dockerignore
     - .travis.yml
